# bazel-sample-project

./: .bazelrc  .codecov.yml  .coverage  .gitignore  .travis.yml  BUILD.bazel  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit2.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit2_30.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit2_fix.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit2_paralism.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit2_serialize.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit3.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit3_30.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit3_fix.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit3_paralism.txt  GCloudEdpAggregatorLifeOfAMeasurementIntegrationTest_commit3_serialize.txt  MODULE.bazel  WORKSPACE  all_kotlin_org_tests.txt  all_tests.txt  aquery_principal_identity.txt  bazel-bazel-sample-project  bazel-bin  bazel-out  bazel-testlogs  before_hashes.txt  brdas_run.txt  build_logs (11).txt  build_logs (9).txt  buildbuddy.yml  codecov_report_faaf93e.json  container.bazelrc  copy_push_multiple.sh  covA.txt  covB.txt  diff.txt  diff_cov.txt  diff_sorted.txt  failed_tests.txt  filtered.info  (+17 more)
coverage-html/: index-sort-f.html  index-sort-l.html  index.html
data/: BUILD.bazel
genhtml/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
import/jvm/: BUILD.bazel
out1/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out1_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out1_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out2/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out2_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out2_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out3/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out3_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out3_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out4/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out4_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out4_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out5/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out52/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out5_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out5_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out6/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out6_f/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out6_nf/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out7/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
out_solver/: index-sort-b.html  index-sort-f.html  index-sort-l.html  (+1 more)
src/main/cc/issue/: BUILD.bazel  buffer_copy_without _checking _size_of_input.cc  cwe_1078_2.cc
src/main/cc/sample/: BUILD.bazel  count_letters_evaluator.cc  count_letters_evaluator.h  manage_users.cc  manage_users.h  sum_evaluator.cc  sum_evaluator.h
src/main/docker/: BUILD.bazel  images.bzl  macros.bzl
src/main/docker/old/: BUILD.bazel
src/main/docker/panel_exchange_client/: BUILD.bazel
src/main/k8s/: BUILD.bazel  base.cue  client.cue  count_letters_deployment.cue  macros.bzl  server.cue  server_main.cue  service.cue
src/main/kotlin/client/: BUILD.bazel  CountLettersClient.kt  CountLettersClientApp.kt  Flags.kt
src/main/kotlin/com/: BUILD.bazel  CommonServer.kt  CommonServerKt.kt  CountLettersServer.kt  Flags.kt
src/main/kotlin/implementation/: BUILD.bazel  CountLettersServiceImpl.kt
src/main/kotlin/issues/: BUILD.bazel  HardCoddedCredentials.kt  cve-2025-24970.kt  cwe_020.kt  cwe_312.kt  cwe_643.kt
src/main/kotlin/problem/: A.kt  BUILD.bazel  Lib.java  MyService.kt  duplicated.kt  service.kt
src/main/kotlin/replicate_error/: BUILD.bazel  fun_1.kt  fun_10.kt  fun_11.kt  fun_12.kt  fun_13.kt  fun_14.kt  fun_15.kt  fun_16.kt  fun_17.kt  fun_18.kt  fun_19.kt  fun_2.kt  fun_20.kt  fun_21.kt  fun_22.kt  fun_23.kt  fun_24.kt  fun_25.kt  fun_26.kt  fun_27.kt  fun_28.kt  fun_3.kt  fun_4.kt  fun_5.kt  fun_6.kt  fun_7.kt  fun_8.kt  fun_9.kt
src/main/kotlin/replicate_error/files/3_files_error/: fun_2.kt  fun_3.kt  fun_4.kt
src/main/kotlin/sample/: BUILD.bazel  CountLettersEvaluator.kt  ManageUsers.kt  SumEvaluator.kt  UseCriptoLib.kt
src/main/proto/sample/: BUILD.bazel  user_profile.proto
src/main/proto/service/: BUILD.bazel
src/main/python/com/: BUILD.bazel  client_count_letters.py
src/main/python/cruiser/: BUILD.bazel  CsGetArtifacts.py  cs_command.sh
src/main/python/issue/: BUILD.bazel  cve-2025-32434.py  cve-2025-46656.py  cve-2025-48889.py  cwe_327.py
src/main/python/sample/: BUILD.bazel  CountLettersEvaluator.py  SumEvaluator.py  count_letters_evaluator.py  manage_users.py  sum_evaluator.py
src/test/cc/sample/: BUILD.bazel  count_letters_evaluator_test.cc  manage_users_test.cc  sum_evaluator_test.cc
src/test/kotlin/client/: BUILD.bazel  ConextionTest.kt  CountLettersClientAppTest.kt  CountLettersClientTest.kt  FlagsTest.kt
src/test/kotlin/com/: BUILD.bazel  CommonServerKtTest.kt  CommonServerTest.kt  CountLettersServerTest.kt  FlagsTest.kt
src/test/kotlin/implementation/: BUILD.bazel  CountLettersServiceImplTest.kt
src/test/kotlin/problem/: B.kt  BUILD.bazel  MyServiceTest.kt  Test.java  duplicated.kt  service.kt
src/test/kotlin/replicate_error/: BUILD.bazel  FunTest.kt
src/test/kotlin/sample/: BUILD.bazel  CountLettersEvaluatorTest.kt  ManageUsersTest.kt  SumEvaluatorTest.kt  UseCriptoLibTest.kt
tools/: BUILD.bazel  jacoco_report.sh
tools/codeql/: BUILD.bazel  run_analysis.sh
tools/pytype/: BUILD.bazel  pytype_requirements.txt  run-check.sh
(+16350 files in other folders)
