exports_files([
    "MODULE.bazel",
    "MODULE.bazel.lock",
    ".bazelrc",
    "container.bazelrc",
    "remote.bazelrc",
    "results.bazelrc",
    ".bazelversion",
])

filegroup(
    name = "all_source_files",
    srcs = glob(
        ["src/**"],
    ),
    visibility = ["//visibility:public"],
)