module(
    name = "bazel-sample-project",
    repo_name = "vecarlos",
)

bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.6.0",
    repo_name = "wfa_rules_kotlin_jvm",
)

bazel_dep(
    name = "common-jvm",
    version = "0.103.0",
    repo_name = "wfa_common_jvm",
)

# --- Bazel Central Registry modules. ---

bazel_dep(
    name = "rules_java",
    version = "8.7.1",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)
bazel_dep(
    name = "rules_python",
    version = "1.1.0",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [],
    boms = [],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
pip.parse(
    hub_name = "pytype_libs",
    python_version = "3.11",
    requirements_lock = "//tools/pytype:pytype_requirements.txt",
)
use_repo(pip, "pytype_libs")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "ninja_build",
    build_file_content = """
filegroup(
    name = "ninja_binary",
    srcs = ["ninja"],
    visibility = ["//visibility:public"],
)
    """,
    sha256 = "b901ba96e486dce377f9a070ed4ef3f79deb45f4ffe2938f8e7ddc69cfb3df77",
    url = "https://github.com/ninja-build/ninja/releases/download/v1.11.1/ninja-linux.zip",
    strip_prefix = "",
)
