module(
    name = "bazel-sample-project",
    repo_name = "vecarlos",
)

bazel_dep(
    name = "rules_kotlin_jvm",
    version = "0.6.0",
    repo_name = "wfa_rules_kotlin_jvm",
)

bazel_dep(
    name = "rules_cue",
    version = "0.4.0",
    repo_name = "wfa_rules_cue",
)

bazel_dep(
    name = "common-jvm",
    version = "0.103.0",
    repo_name = "wfa_common_jvm",
)

# --- Bazel Central Registry modules. ---
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "rules_proto",
    version = "7.1.0",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)
bazel_dep(
    name = "rules_java",
    version = "8.7.1",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)
bazel_dep(
    name = "rules_python",
    version = "1.1.0",
)

bazel_dep(
    name = "protobuf",
    version = "29.3",
    repo_name = "com_google_protobuf",
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "googleapis",
    version = "0.0.0-20250120-318818b.bzlmod.2",
    repo_name = "com_google_googleapis",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    testonly = True,
    artifact = "mockito-core",
    group = "org.mockito",
    version = "5.12.0",
)

maven.artifact(
    testonly = True,
    artifact = "mockito-inline",
    group = "org.mockito",
    version = "5.2.0",
)

maven.artifact(
    testonly = True,
    artifact = "mockito-kotlin",
    group = "org.mockito.kotlin",
    version = "5.4.0",
)
maven.install(
    artifacts = [
        "io.grpc:grpc-netty-shaded:1.62.2",
        "io.grpc:grpc-okhttp:1.62.2",
        "io.grpc:grpc-kotlin-stub:1.4.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.7.3",
        "io.netty:netty-handler:4.1.91.Final",
    ],
    boms = [],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    resolver = "maven",
    strict_visibility = True,
)
use_repo(maven, "maven")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
pip.parse(
    hub_name = "pytype_pip",
    python_version = "3.11",
    requirements_lock = "//tools/pytype:pytype_requirements.txt",
)
use_repo(pip, "pytype_pip")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "ninja_build",
    build_file_content = """
filegroup(
    name = "ninja_binary",
    srcs = ["ninja"],
    visibility = ["//visibility:public"],
)
    """,
    sha256 = "b901ba96e486dce377f9a070ed4ef3f79deb45f4ffe2938f8e7ddc69cfb3df77",
    url = "https://github.com/ninja-build/ninja/releases/download/v1.11.1/ninja-linux.zip",
    strip_prefix = "",
)

http_archive(
    name = "io_grpc_grpc_proto",
    sha256 = "464e97a24d7d784d9c94c25fa537ba24127af5aae3edd381007b5b98705a0518",
    strip_prefix = "grpc-proto-08911e9d585cbda3a55eb1dcc4b99c89aebccff8",
    urls = ["https://github.com/grpc/grpc-proto/archive/08911e9d585cbda3a55eb1dcc4b99c89aebccff8.zip"],
)

# http_archive(
#     name = "codeql_cli",
#     build_file_content = """
# filegroup(
#     name = "codeql_binary",
#     srcs = glob(["**"]),
#     visibility = ["//visibility:public"],
# )
# """,
#     sha256 = "d3748d15014fa5c40dcd93201cf9b41ac52d621ffb256a0ee92fb1b6339f8305",
#     strip_prefix = "codeql",
#     urls = ["https://github.com/github/codeql-cli-binaries/releases/download/v2.18.0/codeql-linux64.zip"],
# )

bazel_dep(name = "toolchains_buildbuddy")
archive_override(
    module_name = "toolchains_buildbuddy",
    integrity = "sha256-e6gcgLHmJHvxCNNbCSQ4OrX8FbGn8TiS7XSVphM1ZU8=",
    strip_prefix = "buildbuddy-toolchain-badf8034b2952ec613970a27f24fb140be7eaf73",
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/badf8034b2952ec613970a27f24fb140be7eaf73.tar.gz"],
)

# Configurar la extensión buildbuddy (requerida)
# buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
# use_repo(buildbuddy, "buildbuddy_toolchain")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.msvc_toolchain(
    # This is the MSVC available on Github Action win22 image
    # https://github.com/actions/runner-images/blob/win22/20250623.1/images/windows/Windows2022-Readme.md
    msvc_edition = "Enterprise",
    msvc_release = "2022",
    # From 'Microsoft Visual C++ 2022 Minimum Runtime' for x64 architecture
    # https://github.com/actions/runner-images/blob/win22/20250623.1/images/windows/Windows2022-Readme.md#microsoft-visual-c
    msvc_version = "14.44.35207",
    # From 'Installed Windows SDKs'
    # https://github.com/actions/runner-images/blob/win22/20250623.1/images/windowUs/Windows2022-Readme.md#installed-windows-sdks
    windows_kits_release = "10",
    windows_kits_version = "10.0.22621.0",
)

register_toolchains(
    # CC toolchains
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_arm64",
    "@toolchains_buildbuddy//toolchains/cc:windows_msvc_x86_64",
)
