sh_test(
    name = "codeql_analysis_test",
    srcs = ["run_analysis.sh"],
    # Pasamos el lenguaje como un argumento al script.
    # Damos acceso a todo el código fuente al script.
    data = [
        "//:all_source_files", # Necesitarás un filegroup en tu BUILD raíz
    ],
    # Hacemos que este test sea grande para darle más tiempo de ejecución.
    size = "large",
)