load("@pip//:requirements.bzl", "all_requirements")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

sh_binary(
    name = "run-checks",
    srcs = ["run-check.sh"],
    args = [
        "$(location @rules_python//python/private:current_interpreter_executable)",
        "$(location @ninja_build//:ninja_binary)",
        "$(location //tools/pytype:pytype-console-script)",
        "$(BINDIR)",
    ],
    data = [
        ":pytype-console-script",
        "//src/main/proto/sample:user_profile_py_proto",
        "@ninja_build//:ninja_binary",
        "@rules_python//python/private:current_interpreter_executable",
    ],
    visibility = ["//:__pkg__"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
    ],
)

py_console_script_binary(
    name = "pytype-console-script",
    binary_rule = py_binary,
    pkg = "@pytype_pip//pytype",
    script = "pytype",
    deps = all_requirements,
)
