load("@wfa_rules_cue//cue:defs.bzl", "cue_library")
load(":macros.bzl", "cue_dump")

package(default_visibility = ["//src/main/k8s:__subpackages__"])

cue_library(
    name = "base",
    srcs = ["base.cue"],
)

cue_library(
    name = "count_letters_deployment",
    srcs = ["count_letters_deployment.cue"],
    deps = [
        ":base",
    ],
)

cue_dump(
    name = "count_letters_yaml",
    srcs = ["count_letters_deployment.cue"],
    deps = [":base"],
)
