load("@wfa_rules_cue//cue:defs.bzl", "cue_library")
load("//build/k8s:defs.bzl", "kustomization_dir")
load(":macros.bzl", "cue_dump")

package(default_visibility = ["//src/main/k8s:__subpackages__"])

cue_library(
    name = "base",
    srcs = ["base.cue"],
)

cue_dump(
    name = "server_yaml",
    srcs = ["server.cue"],
    deps = [":base"],
)

cue_dump(
    name = "service_yaml",
    srcs = ["service.cue"],
    deps = [":base"],
)

cue_dump(
    name = "client_yaml",
    srcs = ["client.cue"],
    deps = [":base"],
)

kustomization_dir(
    name = "cmms",
    srcs = [
        ":client_yaml",
        ":server_yaml",
        ":service_yaml",
    ],
    generate_kustomization = True,
)

# cue_library(
#     name = "count_letters_deployment",
#     srcs = ["count_letters_deployment.cue"],
#     deps = [
#         ":base",
#     ],
# )

# cue_dump(
#     name = "count_letters_yaml",
#     srcs = ["count_letters_deployment.cue"],
#     deps = [":base"],
# )
