load("@wfa_rules_cue//cue:defs.bzl", "cue_library")
load("//build/k8s:defs.bzl", "kustomization_dir")
load("//src/main/k8s:macros.bzl", "cue_dump")

package(default_visibility = ["//visibility:public"])

cue_library(
    name = "base",
    srcs = ["base.cue"],
)

cue_library(
    name = "server_cue",
    srcs = [
        "server.cue",
        "service.cue",
        "server_main.cue",
    ],
    deps = [":base"],
)

cue_library(
    name = "client_cue",
    srcs = ["client.cue"],
    deps = [":base"],
)

cue_dump(
    name = "server",
    tags = ["manual"],
    deps = [":server_cue"],
)

cue_dump(
    name = "client",
    tags = ["manual"],
    deps = [":client_cue"],
)

kustomization_dir(
    name = "cmms",
    srcs = [
        ":client",
        ":server",
    ],
    generate_kustomization = True,
)

# cue_library(
#     name = "count_letters_deployment",
#     srcs = ["count_letters_deployment.cue"],
#     deps = [
#         ":base",
#     ],
# )

# cue_dump(
#     name = "count_letters_yaml",
#     srcs = ["count_letters_deployment.cue"],
#     deps = [":base"],
# )
