load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "buffer_copy_without _checking _size_of_input_cc",
    srcs = ["buffer_copy_without _checking _size_of_input.cc"],
    strip_include_prefix = _INCLUDE_PREFIX,
)
