load("@rules_java//java:defs.bzl", "java_binary")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
load("//src/main/docker:macros.bzl", "java_image")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "count_letters_client_kt_lib",
    srcs = [
        "CountLettersClient.kt",
    ],
    deps = [
        "//import/java/netty",
        "//src/main/proto/service:service_count_letters_kt_jvm_grpc",
        "@wfa_rules_kotlin_jvm//imports/io/gprc/kotlin:stub",
    ],
)

kt_jvm_library(
    name = "count_letters_client_app_kt_lib",
    srcs = [
        "CountLettersClientApp.kt",
    ],
    deps = [
        ":count_letters_client_kt_lib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

java_binary(
    name = "count_letters_client_bin",
    main_class = "client.CountLettersClientAppKt",
    runtime_deps = [
        ":count_letters_client_app_kt_lib",
        ":count_letters_client_kt_lib",
    ],
)

java_image(
    name = "count_letters_client_docker_image",
    binary = ":count_letters_client_bin",
    main_class = "client.CountLettersClientAppK",
    visibility = ["//visibility:public"],
)
