load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "common_server_kt",
    srcs = ["CommonServer.kt"],
    deps = [
        "//import/jvm:grpc_netty_shaded_wrapper",
        "//import/kotlin/grpc:service_config_kt_jvm_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@wfa_rules_kotlin_jvm//imports/io/gprc/kotlin:stub",
    ],
)

kt_jvm_library(
    name = "count_letters_server_kt",
    srcs = ["CountLettersServer.kt"],
    deps = [
        "//src/main/kotlin/com:common_server_kt",
        "//src/main/kotlin/implementation:count_letters_service_implementation_kt",
    ],
)

kt_jvm_binary(
    name = "count_letters_server_bin",
    srcs = ["CountLettersServer.kt"],
    main_class = "com.CountLettersServer.CountLettersServerKt",
    deps = [
        ":common_server_kt",
        "//src/main/kotlin/implementation:count_letters_service_implementation_kt",
        "//src/main/proto/service:service_count_letters_kt_jvm_grpc",
    ],
)
