load("@rules_java//java:defs.bzl", "java_binary")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
load("//src/main/docker:macros.bzl", "java_image")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "common_server_kt",
    srcs = ["CommonServer.kt"],
    deps = [
        "//import/jvm:grpc_netty_shaded_wrapper",
        "//import/kotlin/grpc:service_config_kt_jvm_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@wfa_rules_kotlin_jvm//imports/io/gprc/kotlin:stub",
    ],
)

kt_jvm_library(
    name = "count_letters_server_kt",
    srcs = ["CountLettersServer.kt"],
    deps = [
        "//src/main/kotlin/com:common_server_kt",
        "//src/main/kotlin/implementation:count_letters_service_implementation_kt",
    ],
)

java_binary(
    name = "count_letters_server_bin",
    main_class = "com.CountLettersServerKt",
    runtime_deps = [
        ":common_server_kt",
        ":count_letters_server_kt",
        "//src/main/kotlin/implementation:count_letters_service_implementation_kt",
        "//src/main/proto/service:service_count_letters_kt_jvm_grpc",
    ],
)

java_image(
    name = "count_letters_server_docker_image",
    binary = ":count_letters_server_bin",
    main_class = "com.CountLettersServerKt",
    visibility = ["//visibility:public"],
)
