load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "count_letters_service_implementation_kt", 
    srcs = ["CountLettersServiceImpl.kt"],
    deps = [
        "//src/main/proto/service:service_count_letters_kt_jvm_grpc",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
