load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_binary")

package(default_visibility = ["//visibility:public"])

kt_jvm_binary(
    name = "cwe_643_app",
    srcs = ["cwe_643.kt"],
    main_class = "issues.Cwe_643Kt",
)

kt_jvm_binary(
    name = "cwe_020_app",
    srcs = ["cwe_020.kt"],
    main_class = "issues.Cwe_020Kt",
)

kt_jvm_binary(
    name = "cwe_312_app",
    srcs = ["cwe_312.kt"],
    main_class = "issues.Cwe_312Kt",
)

kt_jvm_binary(
    name = "cve-2025-24970_app",
    srcs = ["cve-2025-24970.kt"],
    main_class = "issues.cve-2025-24970Kt",
    deps = [
        "@maven//:io_netty_netty_handler",
    ],
)