load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_library")

kt_jvm_library(
    name = "a_lib",
    srcs = ["A.kt"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "duplicated_lib",
    srcs = ["duplicated.kt"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "service_lib",
    srcs = ["service.kt"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "lib",
    srcs = ["Lib.java"],
    visibility = ["//visibility:public"],
)