load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(
    default_visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "count_letters_evaluator",
    srcs = ["CountLettersEvaluator.kt"],
)

kt_jvm_library(
    name = "sum_evaluator",
    srcs = ["SumEvaluator.kt"],
)