load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(
    default_visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "count_letters_evaluator",
    srcs = ["CountLettersEvaluator.kt"],
)

kt_jvm_library(
    name = "sum_evaluator",
    srcs = ["SumEvaluator.kt"],
)

kt_jvm_library(
    name = "use_cripto_lib",
    srcs = ["UseCriptoLib.kt"],
    deps = [
        "@maven//:com_google_crypto_tink_tink_awskms"
    ]
)

kt_jvm_library(
    name = "manage_users_kt", 
    srcs = ["ManageUsers.kt"],
    deps = [
        "//src/main/proto/sample:user_profile_kt_proto",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
