load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "user_profile_proto",
    srcs = ["user_profile.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

py_proto_library(
    name = "user_profile_py_proto",
    deps = [":user_profile_proto"],
)

kt_jvm_proto_library(
    name = "user_profile_kt_proto",
    deps = [":user_profile_proto"],
)
