load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "sample",
    srcs = glob(["*.py"]),
    imports = ["../"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/proto/sample:user_profile_py_proto",
    ],
)
